--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="theme-color" content="#ffffff" />
 		<meta name="description" content="Free + open source unblocked games website; 400+ HTML5, DOS, Flash games for school; Free, No Ads" />
-		<meta name="keywords" content="whitespider,unblocked,unlocked,unblocker,proxy,games,html5,flash,dos,free,open source" />
+		<meta name="keywords" content="unblocked,unlocked,unblocker,proxy,games,html5,flash,dos,free,open source" />
 		<base href="/" target="_blank" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="index.css" />
@@ -39,16 +39,7 @@
 		<div id="content">
 			<div id="home-page" current="true">
 				<div class="text-body">
-					<h1>WhiteSpider Unblocked Games</h1>
-					<p>A 100% free + open source unblocked games website designed for school or office users who are
-						restricted from accessing certain websites. We host and maintain this website because we believe
-						everyone should have the freedom to do whatever they like to do. (Disclaimer: The developers are not
-						responsible for issues caused by gaming in unauthorized periods, use it at your own risks.)</p>
-					<p>WhiteSpider Dev is a small but ambitious development team. We aim to bring everyone online freedom without
-						any charges. If you enjoy using this website, please <b>share it with your friends</b> or <b>give a star to the
-						<a href="https://github.com/whitespider-dev/whitespider" target="_blank" rel="noopener">official GitHub repository</a></b>.
-						It is the simplest way for you to do, and the easiest way for us to achieve a better popularity.</p>
-				</div>
+					<h1>
 				<form id="game-search" action="null" method="post">
 					<input name="q" type="text" placeholder="Search Games" maxlength="50" autocomplete="off" />
 					<button type="submit" title="Search"></button>
@@ -70,13 +61,7 @@
 					<div id="gnav-page-number">Page: 0/0</div>
 					<button id="gnav-forward" type="button" disabled="true" title="Next page"></button>
 				</div>
-				<div id="game-notice">&#x26a0; Games with 'USER' label are added by users with the button below.
-					They have not been verified by the developers, and are not guaranteed to work properly.</div>
-				<button id="submit-game" type="button">Submit a game now</button>
-				<div id="game-disclaimer">Disclaimer: All games listed on this site are collected from other popular websites,
-					for making them accessible to restricted users.
-					If copyright violations occurred, please email <a href="mailto:admin@whitespider.dev">admin@whitespider.dev</a>.
-					We will resolve these issues as soon as possible.</div>
+			
 			</div>
 			<div id="chatgpt-page">
 				<h1>ChatGPT</h1>
@@ -167,25 +152,7 @@
 						link instead. (See method 2)</p>
 					<p>Embed mirrors (including data URLs) only work if the website is blocked by a browser extension.
 						<strong>If a network-based restriction is set, you must use a <u>standalone mirror</u>, or a custom DNS server in order to bypass the restriction.</strong></p>
-					<h3>Google Sites Embed Mirrors</h3>
-					<a href="https://sites.google.com/view/whitespider" target="_blank" rel="noopener">https://sites.google.com/view/whitespider</a>
-					<a href="https://sites.google.com/view/white-spider" target="_blank" rel="noopener">https://sites.google.com/view/white-spider</a>
-					<a href="https://sites.google.com/view/whitespi" target="_blank" rel="noopener">https://sites.google.com/view/whitespi</a>
-					<a href="https://sites.google.com/view/wsunbl" target="_blank" rel="noopener">https://sites.google.com/view/wsunbl</a>
-					<a href="https://sites.google.com/view/wsug" target="_blank" rel="noopener">https://sites.google.com/view/wsug</a>
-					<a href="https://sites.google.com/view/x999" target="_blank" rel="noopener">https://sites.google.com/view/x999</a>
-					<a href="https://sites.google.com/view/gainforschool" target="_blank" rel="noopener">https://sites.google.com/view/gainforschool</a>
-					<a href="https://sites.google.com/view/theunlockedbay" target="_blank" rel="noopener">https://sites.google.com/view/theunlockedbay</a>
-					<p>(Hint: You can also create your own mirror link on <a href="https://sites.google.com/new">Google Sites</a> using
-						<a href="https://sites.google.com/view/cbhk/embed-code">embed code</a>)</p>
-					<h3>Standalone Mirrors</h3>
-					<p>(These links might not work if whitelist restriction mode is used)</p>
-					<a href="https://whitespider.gq/" target="_blank" rel="noopener">https://whitespider.gq/</a>
-					<a href="https://whitespider.dev/" target="_blank" rel="noopener">https://whitespider.dev/</a>
-					<a href="https://whitespider.eu.org/" target="_blank" rel="noopener">https://whitespider.eu.org/</a>
-					<br />
-					<p><strong>Important Notice: Do NOT trust mirror links shared by others online. Ads and malicious code could be
-						injected, putting you into security risks.</strong></p>
+				
 					<hr />
 					<h2>2. Use a self-hosted mirror link</h2>
 					<p>Mirror links provided here might be blocked already as they are published publicly. However you can self-host your own mirror
